tests/samples/compile_errors/end_terminator/end_sub_closes_function.bas
Attribute VB_Name = "BadEnd"
Option Explicit

Function ComputeValue() As Long
    ComputeValue = 42
End Sub
